# hermes-android-client

./: .gitignore  CLAUDE.md  HERMES_INTEGRATION.md  LICENSE  README.md  build.gradle.kts  hermes_android_app_techspec.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: device_bridge_prompt.txt
app/src/main/cpp/: CMakeLists.txt  aec_jni.cpp
app/src/main/java/com/hermes/android/: HermesApp.kt  MainActivity.kt
app/src/main/java/com/hermes/android/audio/: AudioDecoder.kt  AudioPlayer.kt  CallTranscriber.kt  ContinuousVoiceCapture.kt  FullDuplexCallEngine.kt  OnDeviceTts.kt  PcmWav.kt  Resampler.kt  SentenceChunker.kt  SpeechSanitizer.kt  ThinkingSoundPlayer.kt  Vad.kt  VoiceRecorder.kt
app/src/main/java/com/hermes/android/data/: AuthInterceptor.kt  CronJobMapping.kt  HermesApi.kt  HermesAudioApi.kt  HermesRepository.kt  SettingsStore.kt
app/src/main/java/com/hermes/android/local/: AppAction.kt  LocalApiServer.kt
app/src/main/java/com/hermes/android/schedule/: BootReceiver.kt  MirroredTaskStore.kt  Notifications.kt  ReminderReceiver.kt  ReminderScheduler.kt  ScheduleSyncWorker.kt
app/src/main/java/com/hermes/android/ui/: AppViewModelProvider.kt  ErrorText.kt  HermesNavHost.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/hermes/android/audio/: SentenceChunkerTest.kt  SpeechSanitizerTest.kt
gradle/: libs.versions.toml
(+37 files in other folders)
